[package]
name = "exposed-macro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Contains macros required by \"exposed\""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.5.0"