[package]
name = "exposed"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Reserved for future use."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
exposed-macro = { path = "../exposed-macro" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.4.1"
libc = "0.2.144"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"
libc = "0.2.144"
intmap = "2.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_Touch",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_OpenGL",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
] }

[features]
default = ["window"]
window = []
audio = []
opengl = []
vulkan = []
assertions = []
