[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
exposed = { path = "../../exposed" }
exposed-gl = { path = "../../exposed-gl" }
gl = "0.14.0"
PMXUtil = "0.9.0"
vmd_parser = { path = "../../../archive/vmd" }
image = "0.24.5"
nalgebra-glm = "0.18.0"
