[package]
name = "vk-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ash = { version = "0.37.3" }
exposed = { path = "../../exposed" }
raw-window-handle = "0.5"
ash-window = "0.12.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.5.0"
libc = "0.2.144"
